# eugene

./: .gitignore  Cargo.toml  README.md
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
docs/: architecture.md  cli.md  configuration.md  memory.md  safety.md  scheduler.md  schema.md  scoring.md  service.md
src/: cli.rs  config.rs  init.rs  lib.rs  main.rs  service.rs
src/agent/: client.rs  llm_logger.rs  mock.rs  mod.rs  prompt.rs  tools_available.rs
src/bot/: commands.rs  formatting.rs  handlers.rs  mod.rs  session.rs
src/executor/: local.rs  mod.rs
src/memory/: decay.rs  errors.rs  mod.rs  queries.rs  schema.sql
src/memory/queries/: cve.rs  llm.rs  mod.rs  (+7 more)
src/orchestrator/: dispatch.rs  mod.rs
src/safety/: errors.rs  mod.rs
src/scheduler/: cron.rs  mod.rs
src/tools/: capture_handshake.rs  capture_pmkid.rs  check_exploit.rs  crack_wpa.rs  errors.rs  get_score_context.rs  get_wifi_intel.rs  log_discovery.rs  log_score.rs  log_wifi_discovery.rs  mod.rs  recall.rs  remember.rs  run_airodump.rs  run_command.rs  run_script.rs  run_summary.rs  save_script.rs  search_scripts.rs  wps_attack.rs
src/tui/: events.rs  mod.rs  widgets.rs
src/vuln/: cpe.rs  lookup.rs  mod.rs  nvd.rs  osv.rs  rate_limiter.rs  searchsploit.rs  types.rs
src/wifi/: adapter.rs  airodump_parser.rs  mod.rs  report.rs  types.rs
tests/: agent.rs  live.rs  memory.rs  orchestrator_integration.rs  phase6_integration.rs  scoring_integration.rs  test_agent_integration.rs  test_agent_live.rs  test_schema_init.rs  test_tool_integration.rs  tools.rs
tests/common/: mod.rs
(+25 files in other folders)
