[package]
name = "eugene"
version = "0.1.0"
edition = "2024"

[dependencies]
# Core async runtime
tokio = { version = "1.45.1", features = ["full"] }

# Database and memory storage
tokio-rusqlite = "0.6.0"
rusqlite = { version = "0.32", features = ["bundled"] }

# Data handling
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"
chrono = "0.4.44"
regex = "1.12"
tempfile = "3"

# Error handling
thiserror = "2.0.12"
anyhow = "1.0.98"

# AI agent framework
rig-core = { path = "/Users/hari/Projects/rig/rig/rig-core" }

[features]
live-tests = []
