[package]
name = "eugene"
version = "0.1.0"
edition = "2024"

[dependencies]
# Core async runtime
tokio = { version = "1.45.1", features = ["full"] }

# Database and memory storage
tokio-rusqlite = "0.6.0"
rusqlite = { version = "0.32", features = ["bundled"] }

# Data handling
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"
chrono = "0.4.44"
regex = "1.12"
tempfile = "3"

# Error handling
thiserror = "2.0.12"
anyhow = "1.0.98"

# AI agent framework
rig-core = { path = "/Users/hari/Projects/rig/rig/rig-core" }

# Phase 6: C2 & Scheduling
teloxide = { version = "0.17", features = ["macros"] }
clap = { version = "4.5", features = ["derive"] }
ratatui = "0.30"
croner = "3.0"
uuid = { version = "1", features = ["v4"] }
log = "0.4"
pretty_env_logger = "0.5"
crossterm = "0.29"

[features]
live-tests = []
